--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="https://mobirise.com">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="https://mobirise.com">CAPABILITIES</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="https://mobirise.com">PRODUCTS</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="https://mobirise.com">INDUSTRIES</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="https://mobirise.com">CONTACT</a></li></ul>                            
-                            <ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-inverse mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__btn btn btn-info" href="https://mobirise.com">GET A QUOTE<br></a></li></ul>
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-info" href="https://mobirise.com">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-info" href="https://mobirise.com">CAPABILITIES</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-info" href="https://mobirise.com">PRODUCTS</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-info" href="https://mobirise.com">INDUSTRIES</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-info" href="https://mobirise.com">CONTACT</a></li></ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-inverse mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__btn btn btn-success" href="https://mobirise.com">GET A QUOTE<br></a></li></ul>
                         </div>
                     </nav>
                 </div>
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-2q" data-rv-view="37" style="background-image: url(assets/images/jfindustries-1536x1536.jpg);">
+<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-2q" data-rv-view="37" style="background-image: url(assets/images/jfindustries-1536x1536.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(92, 104, 116);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -57,7 +57,7 @@
                         <h1 class="mbr-hero__text">Your Source For All Your Engineering Needs.</h1>
                         <p class="mbr-hero__subtext">Why JF Industries Meets All Your Distrbution Needs.</p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="https://mobirise.com">WHAT WE DO&nbsp;</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="https://mobirise.com">WHAT WE DO&nbsp;</a> </div>
                 </div></div>
             </div></div>
         </div>
@@ -161,7 +161,7 @@
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__left col-sm-8">
                     <div class="mbr-section__container mbr-section__container--middle">
                         <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                            <h3 class="mbr-header__text">MAADE TO ORDER</h3>
+                            <h3 class="mbr-header__text">MADE TO ORDER</h3>
                         </div>
                     </div>
                     <div class="mbr-section__container">
