--- a/CONTACT.html
+++ b/CONTACT.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-z" data-rv-view="43">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-z" data-rv-view="37">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="form1-10" data-rv-view="45" style="background-color: rgb(39, 170, 224);">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="form1-10" data-rv-view="39" style="background-color: rgb(39, 170, 224);">
     
     <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -58,7 +58,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form we will contact you shortly.!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-                            <input type="hidden" value="Mwk0LrcQog/knT6o/GLZmAtjRbK5jOfy6ajGdEPlTM7oF1i+7rTkJlwhnqkbPIKp1dulFm3NzGzMEAnqntVNZnOwY1CuxG5Lk5s4HFWqeTb+Yz86/QJ8E250v/1KZVrs" data-form-email="true">
+                            <input type="hidden" value="a+wBqDqhXKc/SM6q56iHt0xontH/f3m6xIy6UzIpGFUmXqvbItj2JXFd8lMcKmZ53QaCiLHSczzqYcBXVtSfU0dbCQtwIaj+OPJ7bRPYK/VBgZtCMcYfTZnDHb6rPuCm" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
