--- a/page5.html
+++ b/page5.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-1w" data-rv-view="145">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-1w" data-rv-view="139">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-2k" data-rv-view="96" style="background-image: url(assets/images/125-elm-6-1200x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website for free</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-2k" data-rv-view="90" style="background-image: url(assets/images/125-elm-6-1200x900.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(61, 61, 61);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -65,7 +65,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-2o" data-rv-view="99">
+<section class="mbr-section" id="header3-2o" data-rv-view="93">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -76,7 +76,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-2n" data-rv-view="101">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-2n" data-rv-view="95">
     <!-- Gallery -->
     <div class="mbr-gallery-layout-article container mbr-section__container mbr-section__container--last">
         <div class=" col-sm-8 col-sm-offset-2">
@@ -198,7 +198,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="testimonials1-21" data-rv-view="136" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="testimonials1-21" data-rv-view="130" style="background-color: rgb(255, 255, 255);">
     <div>
         
         <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
@@ -232,7 +232,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts2-1f" data-rv-view="147" style="background-color: rgb(0, 0, 0);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts2-1f" data-rv-view="141" style="background-color: rgb(0, 0, 0);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
