--- a/page6.html
+++ b/page6.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-2i" data-rv-view="149">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-2i" data-rv-view="143">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="contacts1-2j" data-rv-view="151" style="background-color: rgb(60, 60, 60);">
+<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="contacts1-2j" data-rv-view="145" style="background-color: rgb(60, 60, 60);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
