--- a/rates.html
+++ b/rates.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-12" data-rv-view="54">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-12" data-rv-view="48">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="pricing-table1-13" data-rv-view="56" style="background-color: rgb(240, 240, 240);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="pricing-table1-13" data-rv-view="50" style="background-color: rgb(240, 240, 240);">
     
     <div class="mbr-section__container mbr-section__container--std-top-padding container" style="padding-top: 93px; margin-bottom: 0px;">
         <div class="row">
@@ -145,7 +145,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts2-15" data-rv-view="59" style="background-color: rgb(0, 0, 0);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts2-15" data-rv-view="53" style="background-color: rgb(0, 0, 0);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
