--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-2q" data-rv-view="0" style="background-image: url(assets/images/jfindustries-1536x1536.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-2q" data-rv-view="0" style="background-image: url(assets/images/jfindustries-1536x1536.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(92, 104, 116);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>Google has a highly exhaustive list of fonts compiled into its web font platform and Mobirise makes it easy for you to use them on your website easily and freely.</p>
+                        <p>Google has a highly exhaustive list of fonts compiled into its web font platform and Mobirise makes it easy for you to use them on your website easily and&nbsp;</p>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 93px;">
@@ -141,7 +141,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p>
+                        <p>Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.osslllllllllllll<br><br></p>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 93px;">
