create github pages

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             <div class="mbr-col-lg-4 bgwhite  mbr-col-md-5 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d5dEZSRgH1/2nqQbAyqHQ0fSD/9h7D/hYMWjyq74mvAQb8SjrHK6qtHbq1k4N/RsPcaVKcc9VbjtU67xQSJh46lxiMPzZtGfoitr3DaGhnKklYwKu1K26RwZATyrV9gi">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J2jLAGRnUx5Hr7FdmENZpvRbBNSfO2Oe5/tXZ4ZUyhBdcKjuE5tD+6IkeAFmZIfJMxAgheb3V0gXZmG2Tq92hd6w7Hv1wWN4G+nW5cfwyRGFehyVi4jMaUBfM1XwGFRz">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
@@ -203,7 +203,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zXl5D66Xg86s58zW3JVFWPGg3RjX6semMWgE30fSseHlBINJbY0QRuv9TPqsMLBFcybB8m+13fUQrO4RzhHLzoOkN8umQwH0EvD5gUfTvR475QH5MCk26mT6aUXlnGPj">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NUvPJUZL3ZL5bOCB4e0CSJHD81wub/LKP700VBHEg+FlB6hxlcN7jWevxRcLoYwN2LIRmhKMisz+am6l/H0LJ9vGqo5F3mPDMHZuVu+CsSypHZqZ4CQmFxKWger+rDHX">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Registration Successful!</template>
@@ -256,7 +256,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             <div class="mbr-col-lg-6 mbr-col-md-6 mbr-col-sm-12 center">
 
-                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJRRgX8YWsxokRNk8dTfRLmGc" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
+                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJRRgX8YWsxokRNk8dTfRLmGc" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -291,7 +291,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style mbr-bold align-center display-5">&nbsp;SPEAKERS</h4>
                         
-                        <p class="mbr-text mbr-fonts-style align-center display-7">The majority of our presenters are local professionals who come from a financial background (CPAs, financial advisors, attorneys and other knowledgeable professionals).&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style align-center display-7">The majority of our presenters are local professionals who come from a financial background (CPAs, financial advisors, attorneys and other knowledgeable professionals). Local instructer with 30 years of experiance.</p>
                         
                     </div>
                 </div>
@@ -357,7 +357,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="235">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="257">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
