create github pages

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             <div class="mbr-col-lg-4 bgwhite  mbr-col-md-5 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dNDBIhT4MJlCSU/HClvmixLMmNtE5hltzl6GaGggXBZVQtE9jRSeKUT2MfaLXAYZk5ie/JNNrmdD4iukdM80kCihePTxRKbqJttlYaAp6JIkzQQx6hq90kk2UmmoTHC3">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JyvHEMp2Be3JNGQJn5CVbe43WoVF2CMpYXzKpQ9qagqrc57sq2SGbFrGJxwhOdjDefeUHeytXmSMIvcT+oyPsx059FPVpOP22q0CIAV1E2ice18VNjyqEEkisYeSXIww">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
@@ -203,7 +203,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c8OItif0Xr5YLeSB0hgx5yKqrGfuEbDq7EkLqpOD9xPQ33tQ/B3UG/GB/6u35bzwfRbNIKEIgAWPbGzJMiD8NcLmutMa0ZNlxMKXR2jH2RSSSQfRXKAwop5KcLts7Nnd">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gtuUI2i0t2bRtF4n5QeurXFA2NDRrltsYuwRUmp9vYK0xOX5VcZG9qPrUlng1dUt2JU6ZI+JKZB3/BkC6AaT/VnHYm6AgzCE12gBOYAZGzgw2jdeA7Ux2U+qYQmxVm7c">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Registration Successful!</template>
@@ -213,32 +213,40 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 </div>
 </div>
 <div class="dragArea mbr-row">
-<div data-for="form[data][0][1]" class="mbr-col-md-12 mbr-col-sm-12 field">
-<input type="hidden" name="form[data][0][0]" value="Name" id="form[data][0][0]-form4-11" data-form-field="">
-<input type="text" name="form[data][0][1]" placeholder="Name" data-form-field="Name" required="required" class="field-input display-7" value="" id="form[data][0][1]-form4-11">
+<div data-for="form[data][undefined][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field">
+<div class="mbr-form-row">
+<div class="mbr-col">
+<input type="hidden" name="form[data][0][0]" value="nameFirst" id="form[data][0][0]-form4-11" data-form-field="">
+<input type="text" name="form[data][0][1]" placeholder="First Name" data-form-field="nameFirst" class="text-multiple field-input display-7" required="required" value="" id="form[data][0][1]-form4-11">
 </div>
-<div data-for="form[data][1][1]" class="mbr-col-md-12 mbr-col-sm-12 field">
-<input type="hidden" name="form[data][1][0]" value="Phone" id="form[data][1][0]-form4-11" data-form-field="">
-<input type="tel" name="form[data][1][1]" placeholder="Phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="Phone" class="field-input display-7" value="" id="form[data][1][1]-form4-11">
+<div class="mbr-col">
+<input type="hidden" name="form[data][1][0]" value="nameLast" id="form[data][1][0]-form4-11" data-form-field="">
+<input type="text" name="form[data][1][1]" placeholder="Last Name" data-form-field="nameLast" class="text-multiple field-input display-7" required="required" value="" id="form[data][1][1]-form4-11">
 </div>
-<div data-for="form[data][2][1]" class="mbr-col-md-12 mbr-col-sm-12 field">
-<input type="hidden" name="form[data][2][0]" value="Email" id="form[data][2][0]-form4-11" data-form-field="">
-<input type="email" name="form[data][2][1]" placeholder="Email" data-form-field="Email" required="required" class="field-input display-7" value="" id="form[data][2][1]-form4-11">
 </div>
-<div data-for="form[data][3][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field">
-<label for="form[data][3][1]-form4-11" class="form-control-label mbr-fonts-style display-7">Select Date </label>
-<input type="hidden" name="form[data][3][0]" value="Dates" id="form[data][3][0]-form4-11" data-form-field="">
-<select name="form[data][3][1]" data-form-field="Dates" required="required" class="field-input display-7" id="form[data][3][1]-form4-11">
+</div>
+<div data-for="form[data][2][1]" class="mbr-col-md-12 mbr-col-sm-12 field" style="">
+<input type="hidden" name="form[data][2][0]" value="Phone" id="form[data][2][0]-form4-11" data-form-field="">
+<input type="tel" name="form[data][2][1]" placeholder="Phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="Phone" class="field-input display-7" value="" id="form[data][2][1]-form4-11">
+</div>
+<div data-for="form[data][3][1]" class="mbr-col-md-12 mbr-col-sm-12 field">
+<input type="hidden" name="form[data][3][0]" value="Email" id="form[data][3][0]-form4-11" data-form-field="">
+<input type="email" name="form[data][3][1]" placeholder="Email" data-form-field="Email" required="required" class="field-input display-7" value="" id="form[data][3][1]-form4-11">
+</div>
+<div data-for="form[data][4][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field">
+<label for="form[data][4][1]-form4-11" class="form-control-label mbr-fonts-style display-7">Select Date </label>
+<input type="hidden" name="form[data][4][0]" value="Dates" id="form[data][4][0]-form4-11" data-form-field="">
+<select name="form[data][4][1]" data-form-field="Dates" required="required" class="field-input display-7" id="form[data][4][1]-form4-11">
 <option value="--">--</option>
 <option value="01/28/2020">01/28/2020</option>
 <option value="01/29/2020">01/29/2020</option>
 <option value="01/30/2020">01/30/2020</option>
 </select>
 </div>
-<div data-for="form[data][4][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field" style="">
-<label for="form[data][4][1]-form4-11" class="form-control-label mbr-fonts-style display-7">Number Attending</label>
-<input type="hidden" name="form[data][4][0]" value="Number attending" id="form[data][4][0]-form4-11" data-form-field="">
-<select name="form[data][4][1]" data-form-field="Number attending" required="required" class="field-input display-7" id="form[data][4][1]-form4-11">
+<div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field" data-for="form[data][5][1]" style="">
+<label for="form[data][5][1]-form4-11" class="form-control-label mbr-fonts-style display-7">Number Attending</label>
+<input type="hidden" name="form[data][5][0]" value="Number attending" id="form[data][5][0]-form4-11" data-form-field="">
+<select name="form[data][5][1]" data-form-field="Number attending" required="required" class="field-input display-7" id="form[data][5][1]-form4-11">
 <option value="--">--</option>
 <option value="1">1</option>
 <option value="2">2</option>
@@ -246,7 +254,9 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 <option value="4">4</option>
 </select>
 </div>
-<div class="mbr-col-md-12 mbr-col-sm-12 mbr-section-btn field align-center"><button type="submit" class="btn btn-primary display-6">Register Now</button></div>
+<div class="mbr-col-md-12 mbr-col-sm-12 mbr-section-btn field align-center">
+<button type="submit" class="btn btn-primary display-6">Register Now</button>
+</div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -256,7 +266,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             <div class="mbr-col-lg-6 mbr-col-md-6 mbr-col-sm-12 center">
 
-                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJRRgX8YWsxokRNk8dTfRLmGc" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
+                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJRRgX8YWsxokRNk8dTfRLmGc" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -357,7 +367,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="279">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="304">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
