create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
                     
                 </amp-img>
             </span>
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">PHILADELPHIA RETIREMENT UNIVERSITY</a></span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">247/RETIREMENT&nbsp;</a></span>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
@@ -120,7 +120,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             <div class="mbr-col-lg-4 bgwhite  mbr-col-md-5 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KHZRcfDS+Onji+AN0mKzU9vjzQcebZVn161ZtSSVnRMZCxYO6hRWLGxA0mU95fUYJrhDOchSWZnd6pIhMO/pTHKDuw6H9B7xjaGN+q29SVBT+0Nslf6PMVBSq1LsQEmI">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jdzbzTcG89fo3MXf1Fo7xXtzKWbYMxovrgJ6FmzH0jrysDxVEoa8//niJX/VpCSgVOf3+1GKa94uuclxxxdZO1HGwM4yIkO3cvYGNhsSGL04wI0PNcXy5cjr77fZvHXT">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
@@ -293,7 +293,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="164">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="33">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -341,7 +341,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FR1b4dUPDoIF1/ou1cvgMt1iNfUZLaNPS14f9OJg/rLVgoOAYr2a42xbPp+JILEKDUuYCYCN+ilIPe+3po8htRGVcwRPaNkg1pLQT2EN5La1Typim1nTB4ASRqTtjtjf">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6/tDv4QuCuSX7uvVyfLuVelYbOu9NgGGx5JenhzV7mcOp9Vq0Hmo+see8oeSdlsWOtWSzqunCVh6To/d4APi3w3wwNvF/ax9wDAieGrijhteJhNBTEtjIKKUYdGGG8Og">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Registration Successful!</template>
