--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
                     
                 </amp-img>
             </span>
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">PHILADELPHIA RETIREMENT UNIVERSITY</a></span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">247/RETIREMENT&nbsp;</a></span>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
