create github pages

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
             </div>
 
-            <div class="mbr-col-lg-4 bgwhite  mbr-col-md-5 " data-form-type="formoid">
+            <div class="mbr-col-lg-4 bgwhite  mbr-col-md-5 " style="Height:500px;" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="loUDknUxxukH3CGRavZXShpot3GZ6WB/s3pO9DZWpbMRkVBUqHglUqSdDUKNCb5lyVrdN5jhLccLZ1OT4wcsWqeDPzxw3O8s4E2kJceSmBLJVLI9sn77Oj6frLUvfsVg">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mGcxW3P5sA55Ct32bR8pSoepYP8HATCnndq4V2vtIiCco6dXAF6HD8TrZWblRDHkyo1I6yy+AdrWINjtAmdPKS7+qpL3xXcVEtxEgDblXLsz31my1yl3n30FzqOtKI3W">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
@@ -293,7 +293,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="104">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-rM2YrQCbja" id="features15-14" data-rv-view="45">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -341,7 +341,7 @@ body{font-family: Montserrat;}blockquote{border-color: #f06060;}div[submit-succe
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m2JvElA6pFOeCUoCphsxkzlntScZ1XurOB/noW/uz3xSVRRCTgOLveRj1EbsTp0wBgHvJxlWVXKMb/wAK8pt3KQZR/38yzipBZ4TZvl6O80Pdd7Pf/8g5ZJJIHCQjaj9">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Aivqni2ksW6XtyJxtsJuXUjKhdAQslAoNWGmW2YWkj05m+BxGMBhxpGZ/YuK2uc2XNDFUcoHW0htnQgrmLKfMOFsGUh/V/uGj7sSuKWXDGitfuk3zCJxfvGc0jlKWHeh">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Registration Successful!</template>
