--- a/process.html
+++ b/process.html
@@ -40,15 +40,17 @@
             
         <div class="left-menu">
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                  <a class="nav-link link text-primary display-4" href="index.html">Home</a>
-              </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="DESIGN.html">Design</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Pricing</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="Seo.html" aria-expanded="false">SEO</a><a class="text-primary dropdown-item display-4" href="ppc.html" aria-expanded="false">PAY PER CLICK</a><a class="text-primary dropdown-item display-4" href="socialmedia.html" aria-expanded="false">Social Media</a></div></li></ul>
+                  <a class="nav-link link text-primary display-4" href="#">Home</a>
+              </li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Marketing
+                  </a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">SEO</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">PAY PER CLICK</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">Social Media</a></div></li>
+              <li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Pricing</a></li></ul>
         </div>
 
         <div class="brand-container">
           <div class="navbar-brand">
               <span class="navbar-logo">
-                  <a href="#">
-                      <img src="assets/images/vinciinteractivelogo-4-122x37.png" alt="Vinciinteractive" title="" style="height: 3.8rem;">
+                  <a href="index.html">
+                      <img src="assets/images/vinciinteractivelogo-4-122x37.png" alt="Vinciinteractive" title="ppc" style="height: 3.8rem;">
                   </a>
               </span>
               
@@ -56,12 +58,12 @@
         </div>
 
         <div class="right-menu">
-          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="process.html">Our Process</a>
+          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Design</a></li><li class="nav-item">
+                <a class="nav-link link text-primary display-4" href="#">Our Process</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="contact.html">Contact</a>
-            </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="contact.html">267-317-8191</a></li></ul>
+                <a class="nav-link link text-primary display-4" href="#">Contact</a>
+            </li></ul>
         </div>
       </div>
 
@@ -111,7 +113,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lGTH5L7qm3PXuG1H1E/C4Jusz5Q9bHdy3jOSXxc89E933h8W9btwvNCM/mPnHZvpgLllBo3BYbGhsboRe+JIOXyIUHpwe+0I3n+BqXELWHuriaP1vq7utW7d8rXjDENH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WHVjKFWCx3U5U08QOF+Y+CzBcI99XgzJxrwQQsMZLx8aaHMiryhqIb9U4hlqbytXV86RtIVqft/yT0ari3X1E8BBmTOsdkuglUUlQRzBDyES3IrDehS9I5p2HgATZdzB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
