create github pages

--- a/contact.html
+++ b/contact.html
@@ -33,24 +33,24 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="mbr-overlay" style="opacity: 1;"></div>
 
-      <a class="full-link" href="#">
-        <div class="menu-top card-wrapper mbr-fonts-style mbr-white display-7">Get A Free &nbsp;Competitor Analysis Report</div>
+      <a class="full-link" href="http://www.vinciinteractive.com">
+        <div class="menu-top card-wrapper mbr-fonts-style mbr-white display-7">Get A Free &nbsp;Competitor Analysis Report-Call 267-317-8191</div>
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
         <div class="left-menu">
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                  <a class="nav-link link text-primary display-4" href="#">Home</a>
-              </li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Marketing
-                  </a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">SEO</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">PAY PER CLICK</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">Social Media</a></div></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Pricing</a></li></ul>
+                  <a class="nav-link link text-white display-4" href="#">Home</a>
+              </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Marketing
+                  </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">SEO</a><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">PAY PER CLICK</a><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">Social Media</a></div></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="#">Pricing</a></li></ul>
         </div>
 
         <div class="brand-container">
           <div class="navbar-brand">
               <span class="navbar-logo">
                   <a href="index.html">
-                      <img src="assets/images/vinciinteractivelogo-1-300x92.png" alt="Vinciinteractive" title="ppc" style="height: 3.8rem;">
+                      <img src="assets/images/vinciinteractivelogo-1-300x92.png" alt="Vinciinteractive" title="ppc" style="height: 4.5rem;">
                   </a>
               </span>
               
@@ -58,11 +58,11 @@
         </div>
 
         <div class="right-menu">
-          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Design</a></li><li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="#">Our Process</a>
+          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="#">Design</a></li><li class="nav-item">
+                <a class="nav-link link text-white display-4" href="#">Our Process</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="#">Contact</a>
+                <a class="nav-link link text-white display-4" href="#">Contact</a>
             </li></ul>
         </div>
       </div>
@@ -145,9 +145,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TY5Ae3q4I/5F3373kp12SdwdwI1jNHdfmR9yJQZJxZrmp2czuLHjVWfZ+JhfMByvo+GqMS7s7+GJaosB/up9OGPVmYsF26dmytGdDiEjxavPWAZsKKj7sf9nkE0OmStI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RJXnKOadNNFz9Fxfm4Pq+tPCWmL/BZUFIaat5iy92J44wZfp5nFj4nE8G7kVDo3d0BrhI9smPiTUaJaJxXp0iylinDKihE03Fsy0fe5QzW7ei+l9GiM74kkHQFtn+zfr">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
