--- a/Seo.html
+++ b/Seo.html
@@ -33,24 +33,24 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="mbr-overlay" style="opacity: 1;"></div>
 
-      <a class="full-link" href="#">
-        <div class="menu-top card-wrapper mbr-fonts-style mbr-white display-7">Get A Free &nbsp;Competitor Analysis Report</div>
+      <a class="full-link" href="http://www.vinciinteractive.com">
+        <div class="menu-top card-wrapper mbr-fonts-style mbr-white display-7">Get A Free &nbsp;Competitor Analysis Report-Call 267-317-8191</div>
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
         <div class="left-menu">
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                  <a class="nav-link link text-primary display-4" href="#">Home</a>
-              </li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Marketing
-                  </a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">SEO</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">PAY PER CLICK</a><a class="text-primary dropdown-item display-4" href="#" aria-expanded="true">Social Media</a></div></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Pricing</a></li></ul>
+                  <a class="nav-link link text-white display-4" href="#">Home</a>
+              </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Marketing
+                  </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">SEO</a><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">PAY PER CLICK</a><a class="dropdown-item text-white display-4" href="#" aria-expanded="true">Social Media</a></div></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="#">Pricing</a></li></ul>
         </div>
 
         <div class="brand-container">
           <div class="navbar-brand">
               <span class="navbar-logo">
                   <a href="index.html">
-                      <img src="assets/images/vinciinteractivelogo-1-300x92.png" alt="Vinciinteractive" title="ppc" style="height: 3.8rem;">
+                      <img src="assets/images/vinciinteractivelogo-1-300x92.png" alt="Vinciinteractive" title="ppc" style="height: 4.5rem;">
                   </a>
               </span>
               
@@ -58,11 +58,11 @@
         </div>
 
         <div class="right-menu">
-          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="#">Design</a></li><li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="#">Our Process</a>
+          <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="#">Design</a></li><li class="nav-item">
+                <a class="nav-link link text-white display-4" href="#">Our Process</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link text-primary display-4" href="#">Contact</a>
+                <a class="nav-link link text-white display-4" href="#">Contact</a>
             </li></ul>
         </div>
       </div>
