create github pages

--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,16 @@
   <title>Contact</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -62,7 +63,7 @@
                     <a class="nav-link link text-white display-4" href="index.html#content10-f">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html"><span class="fa fa-phone-square mbr-iconfont mbr-iconfont-btn"></span>267.544.7317 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm  btn-secondary display-4" href="contact.html">
                     Contact Us
@@ -78,7 +79,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6IhAiHQXVQjGu8axT45FZn6vXvkj9lJBZRVV2hWC0N84ef7pli4fnYl6F92mxVyIzyJntZvGT/GjYCuN+T7zdLJpFC5IHUKSxO8Q3ZL9CZTcwQDWLvleDyJDLqjRdRYi">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RmX69VlZ+q/jT0m2sfEnJ+ceqdo5hqevYoy8WgxfUiUPe2IcOx+v2i1rWjymoVf2iYf/Ekf598TkPdSx41w1YwUdpOQrG2/9xUwQn8mKjFnRPXgFxR8lIWOqXRH3MSdE">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             our form!</div>
@@ -129,7 +130,7 @@
                     <div class="mbr-section-text mbr-black pb-3 ">
                         <p class="mbr-text align-left mbr-fonts-style display-7"><strong>No project to small or big</strong></p>
 
-                        <p class="text2 pt-2 align-left mbr-fonts-style display-5"><strong>OUR PHONE NUMBER</strong><br><strong>Tel: 215-215-8787</strong></p>
+                        <p class="text2 pt-2 align-left mbr-fonts-style display-5"><strong>OUR PHONE NUMBER</strong><br><strong>Tel: 267-544-7317</strong></p>
                     </div>
                 </div>
             </div>
@@ -183,12 +184,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/formstyler/jquery.formstyler.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
