--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
                     <a class="nav-link link text-white display-4" href="index.html#content10-f">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html"><span class="fa fa-phone-square mbr-iconfont mbr-iconfont-btn"></span>267.544.7317 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm  btn-secondary display-4" href="contact.html">
                     Contact Us
