--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   
   <title>Home</title>
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -59,7 +60,7 @@
                     <a class="nav-link link text-white display-4" href="index.html#content10-f">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">Services &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html"><span class="fa fa-phone-square mbr-iconfont mbr-iconfont-btn"></span>267.544.7317 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm  btn-secondary display-4" href="contact.html">
                     Contact Us
@@ -78,7 +79,7 @@
         <div class="media-container-column mbr-white p-5 align-left col-lg-8 col-md-10">
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Ranieri Handyman Services</h1>
             
-            <p class="mbr-text pb-3 mbr-fonts-style display-5">We Offer The Best Handyman Service In Bucks County And All The Surrounding Areas. Call&nbsp;(267) 613-4256.</p>
+            <p class="mbr-text pb-3 mbr-fonts-style display-5">We Offer The Best Handyman Service In Bucks County And All The Surrounding Areas. Call&nbsp;(267 544-7317.</p>
             <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#extForm25-j">LEARN MORE</a></div>
         </div>
     </div>
@@ -267,17 +268,17 @@
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/gallery/player.min.js"></script>
   <script src="assets/gallery/script.js"></script>
